# visual-kei-mcp

./: README.md  pyproject.toml
src/ologs/: eras.yaml  intentionality.yaml
src/visual_kei_mcp/: __init__.py  server.py
src/visual_kei_mcp/ologs/: archetypes.yaml  contexts.yaml  subgenres.yaml
