[project]
name = "visual-kei-mcp"
version = "1.0.0"
description = "Visual Kei aesthetic vocabulary MCP server - translates natural language to authentic Japanese rock aesthetic parameters for image generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "numpy",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.fastmcp]
name = "visual-kei-mcp"
description = "Visual Kei aesthetic vocabulary for image generation - 7 subgenres, 4 eras, authentic Japanese rock styling"
entrypoint = "src/visual_kei_mcp/server.py:mcp"
